# ai-system-assistant

./: .env.template  .gitignore  Dockerfile.test  Makefile  README.md  database.db  docker-compose.yaml  pyproject.toml  test_1.py
src/system_assistant/application/: mediator.py
src/system_assistant/application/commands/: base.py  generate_ai_voice_response.py  request_system_help.py  request_system_help_command.py
src/system_assistant/application/gateways/: chat.py
src/system_assistant/application/services/ai/: base.py  prompts.py
src/system_assistant/application/services/text_to_speech/: base.py
src/system_assistant/core/: __init__.py  config.py  container.py  exceptions.py  types.py
src/system_assistant/domain/: vo.py
src/system_assistant/domain/entities/: assistant.py  chat.py  conversations.py  user.py
src/system_assistant/entry/: cli.py
src/system_assistant/entry/cli/: __main__.py
src/system_assistant/entry/cli/assistants/: base.py  debug.py  text.py  voice.py
src/system_assistant/infrastructure/: ioc.py
src/system_assistant/infrastructure/db/dgraph/: schema.py
src/system_assistant/infrastructure/db/sqlite/: init.py  tables.py
src/system_assistant/infrastructure/gateways/chat/: dgraph.py  sqlite.py
src/system_assistant/infrastructure/services/ai/: deepseek.py  gemini.py  openai_agent.py  utils.py
src/system_assistant/infrastructure/services/sound/: base.py  mpg123.py
src/system_assistant/infrastructure/services/text_to_speech/: google.py
src/voice_assistant/: main.py
src/voice_assistant/application/: mediator.py
src/voice_assistant/application/commands/: generate_ai_voice_response.py
src/voice_assistant/application/queries/: base.py
src/voice_assistant/core/: __init__.py  config.py  container.py  exceptions.py  types.py
src/voice_assistant/domain/entities/: assistant.py  conversations.py  user.py
src/voice_assistant/entry/: cli.py
tests/integration/ai_tools/: test_docker.py
tests/integration/gateways/: sqlite.py
(+11 files in other folders)
