[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "openai>=1.72.0",
    "punq>=0.7.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.0",
    "speechrecognition>=3.14.2",
    "uvicorn>=0.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[project.optional-dependencies]
dev = [
    "setuptools>=78.1.0",
]
