[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-assistant"
version = "0.1.0"
description = "System assistant powered with AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "click>=8.1.8",
    "docker>=7.1.0",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.29",
    "loguru>=0.7.3",
    "openai>=1.72.0",
    "punq>=0.7.0",
    "pyaudio>=0.2.14",
    "pydgraph>=24.2.1",
    "python-dotenv>=1.1.0",
    "speechrecognition>=3.14.2",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "setuptools>=78.1.0",
]

[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=100
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["src"]
